# app/Http/Controllers/TaskController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 use App\Tasks;
+use App\Sprint;
 use Illuminate\Http\Request;
 use App\Http\Requests\TaskFormRequest;
 
@@ -20,6 +21,13 @@ class TaskController extends Controller
      *          required=true,
      *          type="string",
      *          in="header"
+     *      ),
+     *      @SWG\Parameter(
+     *          name="id",
+     *          description="id of the task at the time of update",
+     *          required=false,
+     *          type="number",
+     *          in="formData"
      *      ),
      *      @SWG\Parameter(
      *          name="taskName",
@@ -110,7 +118,11 @@ class TaskController extends Controller
      */
     public function create(TaskFormRequest $request)
     {
-        $task=new Tasks();
+        $id=$request->id;
+        if(empty($id))
+            $task=new Tasks();
+        else
+            $task=Tasks::find($id);
         $task->taskName=$request->taskName;
         $task->description=$request->description;
         $task->startDate=new \Datetime($request->startDate);
@@ -121,136 +133,22 @@ class TaskController extends Controller
         $task->priority=$request->priority;
         $task->sprint_id=$request->sprint_id;
         $task->dependent_task_id=$request->dependent_task_id;
+        
+        $sprint=Sprint::find($request->sprint_id);
+        $total = Tasks::where('sprint_id','=',$request->sprint_id)->first([
+            \DB::raw('SUM(estimatedHours) as total')
+        ]);  
+        $total = $total->total + (float)$request->estimatedHours;          
+        if($total > $sprint->estimatedHours){
+            return Response::json(['error'=>['estimatedHours'=>'Estimated limit crossed']], 401);
+        }
+
+
         $task->save();
         return $task;
     }
 
-      /**
-     * @SWG\Put(
-     *      path="/v1/task/{id}",
-     *      operationId="Update-task",
-     *      tags={"Task"},
-     *      summary="Task Updation",
-     *      description="Returns Updated Task",
-     *      @SWG\Parameter(
-     *          name="Authorization",
-     *          description="authorization header",
-     *          required=true,
-     *          type="string",
-     *          in="header"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="id",
-     *          description="id of the Task",
-     *          required=false,
-     *          type="number",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="taskName",
-     *          description="Task name",
-     *          required=true,
-     *          type="string",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="description",
-     *          description="description of the Task",
-     *          required=false,
-     *          type="string",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="startDate",
-     *          description="start datetime",
-     *          required=true,
-     *          type="string",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="endDate",
-     *          description="End Datetime",
-     *          required=false,
-     *          type="string",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="estimatedHours",
-     *          description="Estimated Hours",
-     *          required=true,
-     *          type="number",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="takenHours",
-     *          description="Taken Hours",
-     *          required=true,
-     *          type="number",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="takenHours",
-     *          description="Taken Hours",
-     *          required=true,
-     *          type="number",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="status",
-     *          description="Task Status('created', 'assigned', 'onhold', 'inprogress','completed', 'cancelled',' failed')",
-     *          required=true,
-     *          type="string",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="priority",
-     *          description="Task Priority('critical', 'high', 'medium', 'low')",
-     *          required=true,
-     *          type="string",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="sprint_id",
-     *          description="Id of the sprint",
-     *          required=true,
-     *          type="number",
-     *          in="formData"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="dependent_task_id",
-     *          description="Dependent Task ID",
-     *          required=true,
-     *          type="number",
-     *          in="formData"
-     *      ),
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation"
-     *       ),
-     *       @SWG\Response(response=500, description="Internal server error"),
-     *       @SWG\Response(response=400, description="Bad request"),
-     *     )
-     *
-     * Returns Updated  Task
-     */
-    public function update(TaskFormRequest $request, $id)
-    {
-        $task = Tasks::find($id);
-        $task->taskName=$request->taskName;
-        $task->description=$request->description;
-        $task->startDate=new \Datetime($request->startDate);
-        $task->endDate=new \Datetime($request->endDate);
-        $task->estimatedHours=$request->estimatedHours;
-        $task->takenHours=$request->takenHours;
-        $task->status=$request->status;
-        $task->priority=$request->priority;
-        $task->sprint_id=$request->sprint_id;
-        $task->dependent_task_id=$request->dependent_task_id;
-        $task->save();
-        return $task;
-    }
-
-  /**
+   /**
      * @SWG\Get(
      *      path="/v1/task/{id}",
      *      operationId="single Task",
